<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/instructions_fragment_label"
        tools:layout="@layout/instructions_fragment">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ShoeListFragment"
        android:label="@string/shoe_list_fragment_label"
        tools:layout="@layout/shoe_list_fragment">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ShoeDetailFragment"
        android:label="@string/shoe_detail_fragment_label"
        tools:layout="@layout/shoe_detail_fragment">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/shoeDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>