<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeModel"
            type="com.udacity.shoestore.models.ShoeModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Used a ConstraintLayout for the ScrollView and LinearLayout so I could put on on top of the
         other one so they don't overlap with each other. Then put the button in the LinearLayout to
         simplify the main views in just 2 of them, the ScrollView and the LinearLayout
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appGreen">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shoe_name_tv"
                    style="@style/TextViewStyle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/shoe_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={shoe.name}" />

                <TextView
                    android:id="@+id/company_tv"
                    style="@style/TextViewStyle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/company" />

                <EditText
                    android:id="@+id/company_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/company"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={shoe.company}" />

                <TextView
                    android:id="@+id/shoe_size_tv"
                    style="@style/TextViewStyle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/shoe_size" />

                <EditText
                    android:id="@+id/shoe_size_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/shoe_size_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={`` + shoe.size}" />

                <TextView
                    android:id="@+id/description_tv"
                    style="@style/TextViewStyle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={shoe.description}" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView3"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:onClick="@{() -> shoeModel.terminate()}"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:text="@string/save_button_label"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>