<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appGreen">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome_title"
            android:textColor="#050505"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

        <TextView
            android:id="@+id/welcome_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="336dp"
            android:text="@string/welcome_content"
            android:textColor="#070707"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/welcome_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>