<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Used ConstraintLayout to align the title to the top of the screen and the instructions
         to the center of the screen, and use the constraint properties to align a View in
         reference of another View.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appGreen">

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/instructions_label"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/instructions_content"
            app:layout_constraintStart_toStartOf="@+id/instructions_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/instructions_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingHorizontal="10dp"
            android:text="@string/instructions_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/instructions_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>